chapter11/nginx-secrets/volume-secrets-watch.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: watch-volume
  name: test-volumes-secrets-watch
  namespace: my-ext-secret
spec:
  containers:
  - image: ubuntu:22.04
    name: test
    resources: {}
    command:
    - bash
    - -c
    - 'while [[ 1 == 1 ]]; do date && cat /etc/secrets/somepassword && echo "" && echo "----------" && sleep 1; done'
    volumeMounts:
    - name: mypassword
      mountPath: /etc/secrets
  volumes:
  - name: mypassword
    secret:
      secretName: secret-to-be-created
  dnsPolicy: ClusterFirst
  restartPolicy: Never
