chapter11/nginx-secrets/nginx-secrets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-secrets
  name: nginx-secrets
  namespace: my-ext-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-secrets
  strategy: {}
  template:
    metadata:
      annotations:
        vault.hashicorp.com/service: "https://vault.apps.IPADDR.nip.io"
        #vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/log-level: trace
        vault.hashicorp.com/role: extsecret
        vault.hashicorp.com/tls-skip-verify: "true"
        vault.hashicorp.com/agent-inject-secret-myenv: 'secret/data/extsecret/config'
        vault.hashicorp.com/secret-volume-path-myenv: '/etc/secrets'
      labels:
        app: nginx-secrets
    spec:
      containers:
      - image: python:buster
        name: python
        volumeMounts:
          - mountPath: /src
            name: sources
        command:
        - bash
        - -c
        - /src/startup.sh
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8080
        readinessProbe:
          httpGet:
            path: /health-check
            port: 8080
      volumes:
      - name: sources
        configMap:
          name: service-source
          defaultMode: 0777
      serviceAccount: ext-secret-vault
      serviceAccountName: ext-secret-vault
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-svc
  name: run-service
  namespace: my-ext-secret
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http-service
  selector:
    app: nginx-secrets
